[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://battle_results_scene.gd" id="1"]

[node name="BattleResultsScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.05, 0.15, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -400.0
offset_right = 500.0
offset_bottom = 400.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="ResultBanner" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 150)
text = "VICTORY!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BattleStats" type="Panel" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(800, 300)

[node name="StatsLabel" type="Label" parent="CenterContainer/VBoxContainer/BattleStats"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "BATTLE STATISTICS

Duration: 8:32
Cards Played: 12
Damage Dealt: 25
Damage Taken: 18
Turns: 15"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ELOChanges" type="Panel" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 100)

[node name="ELOLabel" type="Label" parent="CenterContainer/VBoxContainer/ELOChanges"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
text = "ELO RATING CHANGE

Previous: 1000
New: 1025 (+25)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PlayAgainButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Play Again"

[node name="ReturnMenuButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Return to Menu"

[node name="ViewStatsButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "View Details"
